community/geany-plugins: switch to vte3
This also means we get the scope plugin, a graphical interface for gdb

--- a/community/geany-plugins/APKBUILD
+++ b/community/geany-plugins/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=geany-plugins
 pkgver=1.36
-pkgrel=0
+pkgrel=1
 pkgdesc="Plugins for Geany"
 url="https://plugins.geany.org/"
 arch="all"
 license="GPL-3.0-or-later"
 makedepends="lua-dev geany-dev enchant-dev intltool gtkspell-dev libxml2-dev
-	bash vte-dev vala libsoup-dev gpgme-dev python3-dev"
+	bash vte3-dev vala libsoup-dev gpgme-dev python3-dev"
 subpackages="$pkgname-dev $pkgname-doc
 	$pkgname-addons
 	$pkgname-autoclose
@@ -46,6 +46,7 @@ subpackages="$pkgname-dev $pkgname-doc
 	$pkgname-xmlsnippets
 	$pkgname-keyrecord
 	$pkgname-utils
+	$pkgname-scope
 
 	$pkgname-lang
 	"
@@ -125,10 +126,6 @@ pairtaghighlighter() { _plugin pairtaghighlighter "Finds and highlights matching
 pohelper() { _plugin pohelper "A plugin for Geany that improves the support for GetText translation files"; }
 pretty_printer() { _plugin pretty-printer "XML pretty printing plugin for Geany"; }
 projectorganizer() { _plugin projectorganizer "Extension of Geany's project management"; }
-scope() {
-	# Currently missing. Requires GTK2.0
-	_plugin scope "Graphical GDB front-end";
-}
 sendmail() { _plugin sendmail "Send E-Mails from within Geany"; }
 shiftcolumn() { _plugin shiftcolumn "Move Blocks of Text horizontally"; }
 spellcheck() { _plugin spellcheck "Spellcheck text in Geany"; }
@@ -138,5 +135,6 @@ updatechecker() { _plugin updatechecker "A plugin to check whether there is a mo
 vimode() { _plugin vimode "A Vim mode for Geany"; }
 xmlsnippets() { _plugin xmlsnippets "Extends XML/HTML tag autocompletion provided by Geany"; }
 keyrecord() { _plugin keyrecord "Record a sequence of keystrokes and replay it"; }
+scope() { _plugin scope "Graphical GDB front-end"; }
 
 sha512sums="4e361ea0b3c4b063df011cc9fa87f11de5dd083a0cdb48747ef31fabadb772c603b029cd955540247c67cf81690f5f57742142d2e95580ea3002116157ceb6af  geany-plugins-1.36.tar.bz2"
