--- a/community/apk-gtk3/APKBUILD
+++ b/community/apk-gtk3/APKBUILD
@@ -1,27 +1,24 @@
 # Maintainer:
-pkgname=apk-gtk
+pkgname=apk-gtk3
 pkgver=0.1
 pkgrel=1
-pkgdesc="gtk+ frontend to apk"
+pkgdesc="gtk+3.0 frontend to apk"
+options="!check" # No testsuite
 url="https://github.com/kaniini/apk-gtk"
 arch="all"
 license="MIT"
-makedepends="gtk+2.0-dev gtk+3.0-dev vte-dev vte3-dev"
-subpackages="$pkgname-gtk3 $pkgname-policy::noarch"
-source="apk-gtk-$pkgver.tar.gz::https://github.com/kaniini/apk-gtk/archive/v$pkgver.tar.gz"
-options="!check"
+makedepends="gtk+3.0-dev vte3-dev"
+subpackages="$pkgname-policy::noarch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/kaniini/apk-gtk/archive/v$pkgver.tar.gz"
+builddir="$srcdir/apk-gtk-$pkgver"
 
 build() {
 	make GTK_VERSION=3
-	cp apk-gtk apk-gtk.3
-
-	make clean
-	make GTK_VERSION=2
 }
 
 package() {
 	depends="$pkgname-policy"
-	make GTK_VERSION=2 DESTDIR="$pkgdir" install
+	make GTK_VERSION=3 DESTDIR="$pkgdir" install
 }
 
 policy() {
@@ -32,13 +29,4 @@ policy() {
 	mv "$pkgdir"/usr/share/polkit-1 "$subpkgdir"/usr/share/polkit-1
 }
 
-gtk3() {
-	# we can only have one or the other :/
-	depends="$pkgname-policy"
-	conflicts="$pkgname"
-
-	install -Dm755 "$builddir"/apk-gtk.3 "$subpkgdir"/usr/sbin/apk-gtk
-	install -Dm644 "$builddir"/apk-gtk.svg "$subpkgdir"/usr/share/apk-gtk/apk-gtk.svg
-}
-
-sha512sums="1e620f53f759d4c73edf66505fa17d9034edbe99f75764ba0e3cf75dd292451dd53784f1150cc6c6021e5b2a6e92a0f3cade75b32e6930207b9e60306606561e  apk-gtk-0.1.tar.gz"
+sha512sums="1e620f53f759d4c73edf66505fa17d9034edbe99f75764ba0e3cf75dd292451dd53784f1150cc6c6021e5b2a6e92a0f3cade75b32e6930207b9e60306606561e  apk-gtk3-0.1.tar.gz"
