main/ncurses: fix automatic dependency due to symlinks
The -libs subpackage depended on ncurses-terminfo when it shouldn't
because when moving $pkgdir/usr/lib also moved /usr/lib/terminfo which
is a symlink to /usr/share/terminfo which is part of ncurses-terminfo
and thus a dependency would be automatically added by the
prepare_symlink() function from APKBUILD.

So make the libs() function grab only actual libraries by matching
/usr/lib/*.so.* (this does not match libraries meant for -dev which
would be *.so) so /usr/lib/terminfo isn't caught up.

Also make the terminfo() function move /usr/lib/terminfo to it.

In the meantime also do other cleanup like removing unnecessary 'cd
"$builddir"' declarations and make libs() depend on the same
$pkgver-r$pkgrel of the ncurses-terminfo-base.

fixes #11250

--- a/main/ncurses/APKBUILD
+++ b/main/ncurses/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=ncurses
 pkgver=6.1_p20190518
 _ver=${pkgver/_p/-}
-pkgrel=0
+pkgrel=1
 pkgdesc="Console display library"
 url="https://www.gnu.org/software/ncurses/"
 arch="all"
@@ -11,7 +11,7 @@ license="MIT"
 makedepends_build="ncurses"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs
 	$pkgname-terminfo-base:base:noarch $pkgname-terminfo:terminfo:noarch"
-source="https://invisible-mirror.net/archives/ncurses/current/ncurses-${_ver}.tgz"
+source="https://dev.alpinelinux.org/archive/ncurses/ncurses-$_ver.tgz"
 builddir="$srcdir"/ncurses-$_ver
 
 # secfixes:
@@ -23,8 +23,6 @@ builddir="$srcdir"/ncurses-$_ver
 #     - CVE-2017-10684
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -44,7 +42,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" install
 
 	# Install basic terms in /etc/terminfo
@@ -76,19 +73,20 @@ dev() {
 
 terminfo() {
 	pkgdesc="$pkgdesc (other terminfo files)"
-	depends="$pkgname-terminfo-base"
+	depends="$pkgname-terminfo-base=$pkgver-r$pkgrel"
 	rm -rf $subpkgdir
-	mkdir -p $subpkgdir/usr/share
+	mkdir -p $subpkgdir/usr/share $subpkgdir/usr/lib
 	mv $pkgdir/usr/share/terminfo $subpkgdir/usr/share
+	mv $pkgdir/usr/lib/terminfo $subpkgdir/usr/lib
 }
 
 libs() {
 	pkgdesc="Ncurses libraries"
-	depends="$pkgname-terminfo-base"
+	depends="$pkgname-terminfo-base=$pkgver-r$pkgrel"
 	provides="ncurses-widec-libs=$pkgver-r$pkgrel"
 
-	mkdir -p "$subpkgdir"/usr/
-	mv "$pkgdir"/usr/lib "$subpkgdir"/usr/
+	mkdir -p "$subpkgdir"/usr/lib
+	mv "$pkgdir"/usr/lib/*.so.* "$subpkgdir"/usr/lib
 }
 
 base() {
