community/telegram-desktop: upgrade to 1.9.18

--- a/community/telegram-desktop/APKBUILD
+++ b/community/telegram-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 pkgname=telegram-desktop
-pkgver=1.9.16
+pkgver=1.9.18
 pkgrel=0
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
@@ -38,11 +38,13 @@ makedepends="
 	python3
 	libdbusmenu-qt-dev
 	tl-expected
+	hunspell-dev
 	"
 source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	qt-plugin-path.patch
 	small-sizes.patch
+	fix-build.patch
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
 
@@ -91,6 +93,7 @@ package() {
 	done
 }
 
-sha512sums="89cdf12456d9bcaa4e332286d2d5c4da6cf715bd0e798e51e458adb7bf5c89044899beb9ac7b11a808b81e37958473a473e3774519420baf7a6bc34eb7938733  tdesktop-1.9.16-full.tar.gz
+sha512sums="8cf293055f1929dea4b5cbea1b56d0be997e08ba820d3492c674cfaa79396719de139fe9cee313dc91d8e5eb05a56f0ba55c0c2e7912c5ca291c018a6f403ba8  tdesktop-1.9.18-full.tar.gz
 183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
-3d1b8e6f870fc780f9ae8bc6a67eb676a5c5f686dc79e84cd6d64cb3cfafb1be626d0cc3960ffc67cecca21568764a0137c7303a89045fa59f91ba4eb5d8caed  small-sizes.patch"
+3d1b8e6f870fc780f9ae8bc6a67eb676a5c5f686dc79e84cd6d64cb3cfafb1be626d0cc3960ffc67cecca21568764a0137c7303a89045fa59f91ba4eb5d8caed  small-sizes.patch
+296f322fff4b0ae8bd46b5cc72b3b1570de7da56fbe658c5f76d09c891fd1d2725125b0ed21227cb94116cba6f1e86a91f26a18de3cde857f929a726061cacf8  fix-build.patch"
