--- a/community/qt5-qtbase/APKBUILD
+++ b/community/qt5-qtbase/APKBUILD
@@ -6,7 +6,7 @@ _ver=${_ver/_/-}
 _ver=${_ver/beta0/beta}
 _ver=${_ver/rc0/rc}
 _v=${_ver/rc/RC}
-pkgrel=0
+pkgrel=1
 pkgdesc="Qt5 - QtBase components"
 url="https://qt.io/developers/"
 arch="all"
@@ -64,6 +64,11 @@ _qt5_prefix=/usr/lib/qt5
 _qt5_datadir=/usr/share/qt5
 builddir="$srcdir"/qtbase-everywhere-src-${_v%-*}
 
+case "$CTARGET_ARCH" in
+	arm*|aarch64) opengl="-opengl es2";;
+	*) opengl="-opengl";;
+esac
+
 prepare() {
 	default_prepare
 
@@ -89,7 +94,7 @@ build() {
 		-no-separate-debug-info \
 		-no-pch \
 		-nomake examples \
-		-opengl \
+		$opengl \
 		-openssl-linked \
 		-optimized-qmake \
 		-plugin-sql-mysql \
