community/py3-qtwebengine: upgrade to 5.14.0

--- a/community/py3-qtwebengine/APKBUILD
+++ b/community/py3-qtwebengine/APKBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=py3-qtwebengine
-_pyname=PyQtWebEngine
-pkgver=5.12.1
-pkgrel=2
+pkgver=5.14.0
+pkgrel=0
 pkgdesc="Python 3 bindings for QtWebEngine"
 url="https://www.riverbankcomputing.com/software/pyqtwebengine/intro"
 # ppc64le, s390x: not supported
@@ -10,8 +9,8 @@ arch="all !ppc64le !s390x !armhf" # armhf blocked by py3-qt5 -> qt5-qtdeclarativ
 license="GPL-2.0-or-later"
 depends="python3"
 makedepends="python3-dev py3-qt5 qt5-qtwebengine-dev py-sip-dev"
-source="https://www.riverbankcomputing.com/static/Downloads/PyQtWebEngine/$pkgver/PyQtWebEngine_gpl-$pkgver.tar.gz"
-builddir="$srcdir"/"$_pyname"_gpl-"$pkgver"
+source="https://pypi.python.org/packages/source/P/PyQtWebEngine/PyQtWebEngine-$pkgver.tar.gz"
+builddir="$srcdir"/PyQtWebEngine-"$pkgver"
 
 build() {
 	python3 configure.py \
@@ -29,4 +28,4 @@ package() {
 	make -j1 DESTDIR="$pkgdir" INSTALL_ROOT="$pkgdir" install
 }
 
-sha512sums="2bcb0e4da51de9cfb5128e03c03ada77f2d4b99b0885da910584717681b96759ce4301c325cbbf43602d46746e2d37d81ed62f77dd63b33359fd5fae74d7f010  PyQtWebEngine_gpl-5.12.1.tar.gz"
+sha512sums="c5274ce5ba1c80c6851971c3e18acf33121cd5863f613bd1789fdb40323b52429b55b54f3dcbb3127c85343e11f14c004ad54711b2b59cab95fd440f90fe5f2e  PyQtWebEngine-5.14.0.tar.gz"
