--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 pkgdesc="Qt5 - QtWebEngine components"
 url="https://www.qt.io/developers/"
 # ppc64le, s390x: not supported
-arch="all !ppc64le !s390x !armhf !armv7" # armhf blocked by qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="gstreamer-dev gst-plugins-base-dev libxslt-dev mesa-dev icu-dev
 	libxext-dev glib-dev libxcomposite-dev libxrender-dev ninja ffmpeg-dev
@@ -106,7 +106,7 @@ b1f7823d0bdd14dbcb4dbd72ab2d16460d343722d2601921a50f8912ce580a632e0d7b01d7fea6f2
 987b9b35d04317e22ae2cce382e776f3309fc7fd4588e408cd6bed846f47620d01e2b9958cb60c84b8f6f496de6544a21ba399ba8b8f107b73df179794740092  qt-musl-sysreg-for__WORDSIZE.patch
 7dc3e9995596adef65cd96f650eb7ee13d52cabfe6353f04eeb5b8a5776e7e0585ffc2a0a31deea6924352ee9a5a8e03ac37432b558c6a46f3dc457b4283392a  qt-musl-stackstart.patch
 b37fbc4df03c82123f94982039defa12d9bb8c885c9dcf8fff556b5f9cc58182fa471f970cc3a5e2d5dbe964855f591b474366b6a8926d94ae6a78e883811c1a  qt-musl-thread-stacksize.patch
-89005585780ee4459ae3f065f056e166c7686d4dfe3e9e3f2a77b0ed7b8ba819eeb1c9659a971c9cda79cf7fb49b29189765f010a7a55167b6e3282c62c4cbe1  musl-sandbox.patch
+dec69ea8dd9cfa2973264ec405092d364513bbd47303a94c128d873a3de7294760340f3ad31753e6bddd42e98c547312e070b49a062f693b2e19aa01d772063a  musl-sandbox.patch
 f6b1941e40f44b675ab554166e3cd8d3272b23f48571b4949b3af7b8e1c642ee84fe0ee26dd2457fc3bf20e9924cddb411e293b7a8a103029ee196587371a1e2  yasm-nls.patch
 9add958caa0d6acb2866d3927aadfa6b378c92d62463f1b3d65ae1e5400915d89388ac54beb30c4d4d42d2901ee28f404d8574b771854556f6a75698301870eb  nasm.patch
 b99eaa4a0b06ab1cb461fc4bfc7416c779ba1e847614b96f08de97a137a09577ea642813e5e3235167ccc5180c6ffcc06ebf2a61e3b4c210de9dee765e0e7404  musl-hacks.patch
