community/xfce4-battery-plugin: fix battery percentage detection
Fix by Daniele Debernari https://gitlab.com/postmarketOS/pmaports/-/merge_requests/595

--- a/community/xfce4-battery-plugin/APKBUILD
+++ b/community/xfce4-battery-plugin/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfce4-battery-plugin
 pkgver=1.1.3
-pkgrel=0
+pkgrel=1
 pkgdesc="A battery monitor plugin for the Xfce panel"
 url="http://goodies.xfce.org/projects/panel-plugins/xfce4-battery-plugin"
 arch="all"
@@ -9,6 +9,7 @@ license="GPL-2.0-or-later"
 makedepends="xfce4-panel-dev libxfce4ui-dev perl-xml-parser intltool linux-headers"
 subpackages="$pkgname-lang"
 source="https://archive.xfce.org/src/panel-plugins/xfce4-battery-plugin/${pkgver%.*}/xfce4-battery-plugin-$pkgver.tar.bz2
+	00-fix-percentage-detection.patch
 	"
 build() {
 	./configure \
@@ -24,4 +25,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="a591fb37855efbd54d18ae97e320fa4521da611c8ea107813bfd66fa570e8c84576fcf779c7b676ee9918709912de728b0fed490e64d3d2ad403baf719db4520  xfce4-battery-plugin-1.1.3.tar.bz2"
+sha512sums="a591fb37855efbd54d18ae97e320fa4521da611c8ea107813bfd66fa570e8c84576fcf779c7b676ee9918709912de728b0fed490e64d3d2ad403baf719db4520  xfce4-battery-plugin-1.1.3.tar.bz2
+b40d122d5b80ac548f739dcda3e9a049b9183b5aa8d0f2e0e5b7f4bb91024bdc0722ecb6492dc0296c6b0a50598a871a254181f33ce3cea2f4bdd7a64b32343e  00-fix-percentage-detection.patch"
