community/iio-sensor-proxy: add patches for Tegra devices
Patches have been merged upstream already but there is no new release
yet. Will be included in 2.9

--- a/community/iio-sensor-proxy/APKBUILD
+++ b/community/iio-sensor-proxy/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=iio-sensor-proxy
 pkgver=2.8
-pkgrel=1
+pkgrel=2
 pkgdesc="IIO sensors to D-Bus proxy"
 url="https://developer.gnome.org/iio-sensor-proxy/1.0/"
 arch="all"
@@ -11,7 +11,9 @@ makedepends="eudev-dev libgudev-dev glib-dev autoconf automake libtool gtk+3.0-d
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://github.com/hadess/iio-sensor-proxy/releases/download/$pkgver/iio-sensor-proxy-$pkgver.tar.xz
 	iio-sensor-proxy.initd
-	0001-Revert-build-Check-for-.pc-files-before-using-them.patch"
+	0001-Revert-build-Check-for-.pc-files-before-using-them.patch
+	292.patch
+	299.patch"
 
 prepare() {
 	default_prepare
@@ -42,4 +44,6 @@ package() {
 
 sha512sums="2631ca1bc3fc115d392772010c0e879750cdb1f8d3bb247483527481232c9107212d2c8cbf3bdc30942ef3bd34f4e5c56f168367cafcb8d6381b47ff908014c8  iio-sensor-proxy-2.8.tar.xz
 b0f2875074ff1211faeca3e29b32f60c5604ca31b6dac3d4d99f057ed32e2453aefc4495c34cf3885badacc7168b6c032f3d084052db52977bbe8438e76eac5f  iio-sensor-proxy.initd
-5480763f85cb22fd7b1b791609baa3a4b251fc30a025b40aee2de584fa114686bf181a87a249ba4b0cb9080881ff55498baa7e496513bc39fa1af7c43253c465  0001-Revert-build-Check-for-.pc-files-before-using-them.patch"
+5480763f85cb22fd7b1b791609baa3a4b251fc30a025b40aee2de584fa114686bf181a87a249ba4b0cb9080881ff55498baa7e496513bc39fa1af7c43253c465  0001-Revert-build-Check-for-.pc-files-before-using-them.patch
+68a2815f4bd54c05af286a096ca8b7cac11e159cb47b012187b277ff03a9a73f0e0c26e5e67b1855e6d67714f9be8cf94a6292d5e3d85d23ced00f43ae75f433  292.patch
+b7aef50fb08e33ebca508da4c394dfa02135a9da2c2efac73f3d43b6bfe3e973484892c9f3ec76e9a762b32c0f647e42de6f0bad5ec4b520e14dfc6ae6839445  299.patch"
