community/stalonetray: modernize

--- a/community/stalonetray/APKBUILD
+++ b/community/stalonetray/APKBUILD
@@ -2,39 +2,23 @@
 # Maintainer: ScrumpyJack <scrumpyjack@st.ilet.to>
 pkgname=stalonetray
 pkgver=0.8.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Stalonetray is a stand-alone freedesktop.org and KDE system tray"
 url="http://stalonetray.sourceforge.net/"
 arch="all"
-license="GPL"
-depends=""
-depends_dev=""
+license="GPL-2.0-only"
 makedepends="libx11-dev libxpm-dev"
-install=""
 subpackages="$pkgname-doc"
-source="https://downloads.sourceforge.net/project/${pkgname}/${pkgname}/${pkgname}-${pkgver}/${pkgname}-${pkgver}.tar.bz2"
-
-_builddir=${srcdir}/${pkgname}-${pkgver}
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
+source="https://downloads.sourceforge.net/project/stalonetray/stalonetray/stalonetray-$pkgver/stalonetray-$pkgver.tar.bz2"
 
 build() {
-	cd "$_builddir"
-        ./configure --prefix=/usr
-        make
+	./configure --prefix=/usr
+	make
 }
 
 package() {
-	cd "$_builddir"
-        make DESTDIR=$pkgdir install
-        install -D -m644 stalonetrayrc.sample $pkgdir/etc/stalonetrayrc
+	make DESTDIR=$pkgdir install
+	install -D -m644 stalonetrayrc.sample $pkgdir/etc/stalonetrayrc
 }
 
 sha512sums="b1c50d844b6497b586c1ad56b721675690ea305a4e3a2601ab5305af0e208c215825eefa8fa374ae0c392252156a8dffd5882992c943344f5b6a674fe6553942  stalonetray-0.8.3.tar.bz2"
