main/clutter: modernize

--- a/main/clutter/APKBUILD
+++ b/main/clutter/APKBUILD
@@ -12,10 +12,9 @@ depends_dev="gdk-pixbuf-dev json-glib-dev atk-dev mesa-dev libxcomposite-dev
 makedepends="$depends_dev cogl-dev gtk+3.0-dev pango-dev gobject-introspection-dev intltool"
 options="!check" # need DISPLAYS
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
-source="https://download.gnome.org/sources/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/clutter/${pkgver%.*}/clutter-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,12 +32,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
