main/postgresql-pllua: move s390x to luajit

--- a/main/postgresql-pllua/APKBUILD
+++ b/main/postgresql-pllua/APKBUILD
@@ -11,12 +11,7 @@ url="https://github.com/RhodiumToad/pllua-ng"
 arch="all"
 license="MIT"
 depends="postgresql"
-# LuaJIT does not support s390x.
-case "$CARCH" in
-	s390x) _lua=lua5.3 _makeopts="LUAC=luac5.3 LUA=lua5.3";;
-	*) _lua=luajit; _makeopts="LUAJIT=luajit";;
-esac
-makedepends="postgresql-dev $_lua-dev"
+makedepends="postgresql-dev luajit-dev"
 options="!check"  # tests require running PostgreSQL
 provides="pllua=$pkgver-r$pkgrel"  # for backward compatibility
 replaces="pllua"  # for backward compatibility
@@ -24,10 +19,15 @@ subpackages="$pkgname-dev"
 source="https://github.com/RhodiumToad/$_pkgname/archive/$_pkgver/$_pkgname-$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$_pkgver"
 
+case "$CARCH" in
+	s390x) makedepends="$makedepends llvm clang" ;;
+esac
+
 build() {
-	make $_makeopts \
-		LUA_INCDIR=$(pkgconf --variable=includedir $_lua) \
-		LUALIB=$(pkgconf --libs $_lua) \
+	make \
+		LUAJIT=luajit \
+		LUA_INCDIR=$(pkgconf --variable=includedir luajit) \
+		LUALIB=$(pkgconf --libs luajit) \
 		USE_PGXS=1
 }
 
