community/multirun: fix build type

--- a/community/multirun/APKBUILD
+++ b/community/multirun/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=multirun
 pkgver=1.0.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A minimalist init process designed for Docker."
 url="https://nicolas-van.github.io/multirun/"
 arch="all"
@@ -16,7 +16,7 @@ build() {
 		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
 	fi
 	cmake \
-		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
