--- a/community/qca/APKBUILD
+++ b/community/qca/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qca
-pkgver=2.2.1
+pkgver=2.3.0
 pkgrel=0
 pkgdesc="Qt cryptographic architecture"
 url="https://userbase.kde.org/QCA"
@@ -9,7 +9,7 @@ arch="all"
 license="LGPL-2.1-or-later"
 makedepends="qt5-qtbase-dev cmake cyrus-sasl-dev"
 subpackages="$pkgname-dev $pkgname-doc lib$pkgname:libs"
-source="https://download.kde.org/stable/qca/$pkgver/qca-${pkgver}.tar.xz"
+source="https://download.kde.org/stable/qca/$pkgver/qca-$pkgver.tar.xz"
 
 build() {
 	cmake -DCMAKE_INSTALL_PREFIX=/usr -DWITH_cyrus-sasl_PLUGIN=yes .
@@ -31,4 +31,4 @@ libs() {
 	mv "$pkgdir"/usr/lib/qca-qt5 "$subpkgdir"/usr/lib
 }
 
-sha512sums="3a0e8aa7cf3ea9a7244facaf1d521ebca2753af37636e7bf5f21c57ae880ac9682ae7d6d9fa5ce41b73568ff9538214956b89cd41228c2cb828d9068c2031a9c  qca-2.2.1.tar.xz"
+sha512sums="ca9251868e073834562fa62ffc64b3e7817c9ddadc6bc3fb99cf8b5c8d859969562170a98874be9590c617b2dd8e5590d2c83792554f54bb880c677902db22fe  qca-2.3.0.tar.xz"
