community/telegram-desktop: upgrade to 1.9.19

--- a/community/telegram-desktop/APKBUILD
+++ b/community/telegram-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 pkgname=telegram-desktop
-pkgver=1.9.18
+pkgver=1.9.19
 pkgrel=0
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
@@ -44,7 +44,6 @@ source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	qt-plugin-path.patch
 	small-sizes.patch
-	fix-build.patch
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
 
@@ -93,7 +92,6 @@ package() {
 	done
 }
 
-sha512sums="8cf293055f1929dea4b5cbea1b56d0be997e08ba820d3492c674cfaa79396719de139fe9cee313dc91d8e5eb05a56f0ba55c0c2e7912c5ca291c018a6f403ba8  tdesktop-1.9.18-full.tar.gz
+sha512sums="29070c6e1d813943d5062dc1703f383a18323b5698fbc4e6f2c89b33366da9da5d1ec84dc29950288e7e7d112024de2924244ec9c800d59d4b210e6288c7291d  tdesktop-1.9.19-full.tar.gz
 183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
-3d1b8e6f870fc780f9ae8bc6a67eb676a5c5f686dc79e84cd6d64cb3cfafb1be626d0cc3960ffc67cecca21568764a0137c7303a89045fa59f91ba4eb5d8caed  small-sizes.patch
-296f322fff4b0ae8bd46b5cc72b3b1570de7da56fbe658c5f76d09c891fd1d2725125b0ed21227cb94116cba6f1e86a91f26a18de3cde857f929a726061cacf8  fix-build.patch"
+3d1b8e6f870fc780f9ae8bc6a67eb676a5c5f686dc79e84cd6d64cb3cfafb1be626d0cc3960ffc67cecca21568764a0137c7303a89045fa59f91ba4eb5d8caed  small-sizes.patch"
