community/lab: move to community

--- a/community/lab/APKBUILD
+++ b/community/lab/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
-# Maintainer:
+# Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=lab
 pkgver=0.17.2
 pkgrel=0
