--- a/main/python3/APKBUILD
+++ b/main/python3/APKBUILD
@@ -3,15 +3,14 @@
 
 pkgname=python3
 # the python3-tkinter's pkgver needs to be synchronized with this.
-pkgver=3.8.1
+pkgver=3.8.2
 _bluez_ver=5.53
 _basever="${pkgver%.*}"
-pkgrel=3
+pkgrel=0
 pkgdesc="A high-level scripting language"
 url="https://www.python.org/"
 arch="all"
-license="custom"
-provides="py3-pip"
+license="PSF-2.0"
 subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-tests::noarch
 	$pkgname-wininst"
 makedepends="expat-dev openssl-dev zlib-dev ncurses-dev bzip2-dev xz-dev
@@ -25,6 +24,8 @@ source="https://www.python.org/ftp/python/$pkgver/Python-$pkgver.tar.xz
 builddir="$srcdir/Python-$pkgver"
 
 # secfixes:
+#   3.8.2-r0:
+#     - CVE-2020-8315
 #   3.7.5-r0:
 #     - CVE-2019-16056
 #     - CVE-2019-16935
@@ -64,7 +65,8 @@ build() {
 		--with-dbmliborder=gdbm:ndbm \
 		--with-system-expat \
 		--with-system-ffi \
-		--with-threads
+		--with-threads \
+		--without-ensurepip
 
 	# set thread stack size to 1MB so we don't segfault before we hit
 	# sys.getrecursionlimit()
@@ -162,7 +164,7 @@ wininst() {
 		"$subpkgdir"/usr/lib/python$_basever/distutils/command
 }
 
-sha512sums="d41381848cc1ec8009643b71875f395a9ac2c8e12a5b1efef33caf8a9e99a337c790d4354695c85352d11b62092ae372b5af62f78724363fcbf3504ff9a6ddca  Python-3.8.1.tar.xz
+sha512sums="ca37ad0e7c5845f5f228566aa8ff654a8f428c7d4a5aaabff29baebb0ca3219b31ba8bb2607f89e37cf3fc564f023b8407e53a4f2c47bd99122c1cc222613e37  Python-3.8.2.tar.xz
 62956e6293ec2517ec453dc7a6c82d34a8c446df8add8fe411b0a45fd5604817f3a19fbc646ad6f68df435f3cd2bd10ae040890e30db83b022f90b54cc6b3c74  bluez-5.53.tar.xz
 37b6ee5d0d5de43799316aa111423ba5a666c17dc7f81b04c330f59c1d1565540eac4c585abe2199bbed52ebe7426001edb1c53bd0a17486a2a8e052d0f494ad  fix-xattrs-glibc.patch
 ab8eaa2858d5109049b1f9f553198d40e0ef8d78211ad6455f7b491af525bffb16738fed60fc84e960c4889568d25753b9e4a1494834fea48291b33f07000ec2  musl-find_library.patch"
