testing/tectonic: rebuild against icu 65.1

--- a/testing/tectonic/APKBUILD
+++ b/testing/tectonic/APKBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tectonic
 pkgver=0.1.12
-pkgrel=0
+pkgrel=1
 pkgdesc="Tectonic is a modernized, complete, self-contained TeX/LaTeX engine"
 url="https://tectonic-typesetting.github.io"
-arch="all !s390x !x86" # fails to link due to fstack-protector
+arch="all !s390x"
 license="MIT"
 makedepends="
 	cargo
