--- a/main/oath-toolkit/APKBUILD
+++ b/main/oath-toolkit/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=oath-toolkit
 pkgver=2.6.2
-pkgrel=0
+pkgrel=1
 pkgdesc="OATH Toolkit One-time password components"
 url="http://www.nongnu.org/oath-toolkit/index.html"
 arch="all"
@@ -32,6 +32,7 @@ package() {
 }
 
 liboath() {
+	depends=""
 	pkgdesc="A shared and static C library for OATH handling."
 	license="LGPL-2.1-or-later"
 	mkdir -p "$subpkgdir"/usr/lib
@@ -39,13 +40,12 @@ liboath() {
 }
 
 libpskc() {
+	depends=""
 	pkgdesc="Library for Portable Symmetric Key Container"
 	license="LGPL-2.1-or-later"
 	mkdir -p "$subpkgdir"/usr/lib
 	mv "$pkgdir"/usr/lib/libpskc.so* "$subpkgdir"/usr/lib
 }
-
-
 
 oathtool() {
 	depends="oath-toolkit-liboath"
@@ -62,7 +62,6 @@ pam_oath() {
 	mkdir -p "$subpkgdir"/lib/security
 	mv "$pkgdir"/usr/lib/security/pam_oath.so "$subpkgdir"/lib/security
 }
-
 
 sha512sums="201a702a05a2e9fb3a66d04750e1a34e293342126caf02c344954a0d9fd0daafe73ca7f1fe273be129ae555a29b82b72fa2b4770ea2ad10711924e1926ec2cfb  oath-toolkit-2.6.2.tar.gz
 dda606ee9c32075f2268af76394ac886da419ed42e34a45bb528ff26e39faede420ec7201dc32308d9cbfbc253d27a5d603e7bb6eaffc96a88a6bd9b2b3c54d9  oath-toolkit-2.6.2-gcc7.patch"
