main/py3-pip: upgrade to 20.0.2

--- a/main/py3-pip/APKBUILD
+++ b/main/py3-pip/APKBUILD
@@ -1,29 +1,108 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
-# Note: Python 3 already includes pip, so py3-pip is not needed.
-pkgname=py2-pip
+pkgname=py3-pip
 _pkgname=pip
-pkgver=18.1
+pkgver=20.0.2
 pkgrel=0
 pkgdesc="A tool for installing and managing Python packages"
 options="!check" # Requires pytest
 url="http://www.pip-installer.org"
 arch="noarch"
 license="MIT"
-provides="py-pip=$pkgver-r$pkgrel"
-replaces="py-pip"
-depends="python2 py-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/pypa/pip/archive/$pkgver.tar.gz"
+depends="
+	python3
+	py3-appdirs
+	py3-cachecontrol
+	py3-colorama
+	py3-distlib
+	py3-distro
+	py3-html5lib
+	py3-msgpack
+	py3-packaging
+	py3-pep517
+	py3-progress
+	py3-parsing
+	py3-pytoml
+	py3-requests
+	py3-retrying
+	py3-setuptools
+	py3-six
+	py3-webencodings
+	py3-contextlib2
+	"
+subpackages="
+	$pkgname-zsh-completion:zshcomp:noarch
+	$pkgname-fish-completion:fishcomp:noarch
+	$pkgname-bash-completion:bashcomp:noarch
+	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/pypa/pip/archive/$pkgver.tar.gz
+	https://github.com/pypa/pip/commit/9be7454fd69081d06a3f8234a08a6d791e13173f.patch
+	"
 builddir="$srcdir/$_pkgname-$pkgver"
 
+provides="py-pip=$pkgver-r$pkgrel" # Backwards compatibility
+replaces="py-pip" # Backwards compatibility
+
+prepare() {
+	default_prepare
+
+	# Remove certifi usage
+	sed -i 's|from pip._vendor.certifi import where|where = lambda: "/etc/ssl/certs/ca-certificates.crt"|' src/pip/_internal/commands/debug.py
+
+	for f in src/pip/_vendor/*; do
+		if [ "${f##*/}" = __init__.py ]; then
+			continue
+		fi
+		rm -rf "$f"
+	done
+	sed -i -e 's/DEBUNDLED = False/DEBUNDLED = True/' src/pip/_vendor/__init__.py
+}
+
 build() {
-	cd "$builddir"
-	python2 setup.py build
+	python3 setup.py build
 }
 
 package() {
-	cd "$builddir"
-	python2 setup.py install --prefix=/usr --root="$pkgdir"
+	python3 setup.py install --prefix=/usr --root="$pkgdir"
+
+	PYTHONPATH="$pkgdir"/usr/lib/python3.8/site-packages "$pkgdir"/usr/bin/pip \
+		completion --bash | \
+		install -Dm644 /dev/stdin "$pkgdir"/usr/share/bash-completion/completions/pip
+
+	PYTHONPATH="$pkgdir"/usr/lib/python3.8/site-packages "$pkgdir"/usr/bin/pip \
+		completion --zsh | \
+		install -Dm644 /dev/stdin "$pkgdir"/usr/share/zsh/site-functions/_pip
+
+	PYTHONPATH="$pkgdir"/usr/lib/python3.8/site-packages "$pkgdir"/usr/bin/pip \
+		completion --fish | \
+		install -Dm644 /dev/stdin "$pkgdir"/usr/share/fish/completions/pip.fish
 }
 
-sha512sums="ddb67ad52c2b4f0cae89e11bd90dbd20275fce0ee34a8e0929210a8907cd61c2298221a4ddf1e7b196b0274241eb88097decbbb84196ab30dd4e979e7378d91f  py2-pip-18.1.tar.gz"
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	cd "$pkgdir" || return 0
+	amove /usr/share/bash-completion/completions
+}
+
+zshcomp() {
+	depends=""
+	pkgdesc="Zsh completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	amove usr/share/zsh/site-functions
+}
+
+fishcomp() {
+	depends=""
+	pkgdesc="Fish completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel fish"
+
+	cd "$pkgdir" || return 0
+	amove usr/share/fish/completions
+}
+
+sha512sums="f9965944ca0f319d01db1638ce97cf64772afff1778b3b1271155de73208cfcb3954d89a469c1143c0bf3288a53d4446165a49df994374b16ac6f7ffdae85857  py3-pip-20.0.2.tar.gz
+61732786303ca7ec7828d04099a884534034d50cdd9a7a0de2ace34c28381a992943880f03797a64d5d4f3a76d317d356f76ffff5e3ffd97ed611b234cc05528  9be7454fd69081d06a3f8234a08a6d791e13173f.patch"
