testing/isoping: work around google's git service generating dynamic archives

--- a/testing/isoping/APKBUILD
+++ b/testing/isoping/APKBUILD
@@ -8,7 +8,7 @@ url="https://gfiber.googlesource.com/vendor/google/platform"
 arch="all"
 license="Apache-2.0"
 makedepends="openssl-dev"
-source="isoping-$pkgver.tar.gz::https://gfiber.googlesource.com/vendor/google/platform/+archive/refs/heads/master.tar.gz
+source="https://distfiles.dereferenced.org/stuff/isoping-$pkgver.tar.gz
 	0001-isoping-support-openssl-1.1.patch"
 builddir="$srcdir/cmds"
 options="!check"
