community/wl-clipboard: split shell completion

--- a/community/wl-clipboard/APKBUILD
+++ b/community/wl-clipboard/APKBUILD
@@ -2,16 +2,19 @@
 # Maintainer: Robert Sacks <robert@sacks.email>
 pkgname=wl-clipboard
 pkgver=2.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Command-line copy/paste utilities for Wayland"
 url="https://github.com/bugaevc/wl-clipboard"
 arch="all"
 license="GPL-3.0-or-later"
 options="!check" # No test suite
 makedepends="meson ninja wayland-dev wayland-protocols"
-subpackages="$pkgname-doc"
+subpackages="
+	$pkgname-doc
+	$pkgname-zsh-completion:zshcomp:noarch
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/bugaevc/wl-clipboard/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
 	meson \
@@ -26,6 +29,23 @@ build() {
 
 package() {
 	DESTDIR="$pkgdir" ninja -C build install
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	cd "$pkgdir" || return 0
+	amove /usr/share/bash-completion/completions
+}
+
+zshcomp() {
+	depends=""
+	pkgdesc="Zsh completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	amove usr/share/zsh/site-functions
 }
 
 sha512sums="a719b7197b0dec247ef50d800d8f10f3c377e41ff6d79ebfb4da50f2581d24a25ff987985e7a8f68842fdf8e706527d0b9ee3545c0044673110963b3ba8b55f1  wl-clipboard-2.0.0.tar.gz"
