community/flatpak: split shell completion

--- a/community/flatpak/APKBUILD
+++ b/community/flatpak/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=flatpak
 pkgver=1.6.2
-pkgrel=1
+pkgrel=2
 pkgdesc="Application deployment framework for desktop apps"
 url="https://flatpak.org"
 arch="all"
@@ -13,7 +13,13 @@ makedepends="glib-dev libarchive-dev libsoup-dev libcap-dev polkit-dev
 	libxau-dev ostree-dev>=2018.08 fuse-dev json-glib-dev
 	libgcab-dev appstream-glib-dev dconf-dev
 	libseccomp-dev libxslt-dev gpgme-dev bison"
-subpackages="$pkgname-dev $pkgname-lang $pkgname-dbg"
+subpackages="
+	$pkgname-dev
+	$pkgname-lang
+	$pkgname-dbg
+	$pkgname-zsh-completion:zshcomp:noarch
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 install="flatpak.pre-install flatpak.pre-upgrade"
 source="https://github.com/flatpak/flatpak/releases/download/$pkgver/flatpak-$pkgver.tar.xz
 		musl-fixes.patch
@@ -38,7 +44,6 @@ build() {
 		--with-priv-mode=setuid \
 		--with-system-bubblewrap \
 		--with-system-helper-user=flatpak
-
 	make
 }
 
@@ -52,6 +57,23 @@ package() {
 
 	mkdir -p "$pkgdir"/usr/lib/modules-load.d
 	install -m644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/flatpak.conf
+}
+
+bashcomp() {
+	depends=""
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	cd "$pkgdir" || return 0
+	amove /usr/share/bash-completion/completions
+}
+
+zshcomp() {
+	depends=""
+	pkgdesc="Zsh completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	amove usr/share/zsh/site-functions
 }
 
 sha512sums="7f7850cb946924bb08cf43578d026d4bb9c72953511d90a8ffaf0984c89b43ab004e21e0cd1cdf4e3d8e84077ad17c9ddb48ec465974ad93efb57f40e1f4f7d7  flatpak-1.6.2.tar.xz
