--- a/community/xterm/APKBUILD
+++ b/community/xterm/APKBUILD
@@ -2,12 +2,13 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=xterm
 pkgver=353
-pkgrel=0
+pkgrel=1
 pkgdesc="X Terminal Emulator"
 options="!check" # Requires vttest
 url="http://invisible-island.net/xterm"
 arch="all"
 license="MIT"
+depends="ncurses-terminfo"
 makedepends="libxaw-dev libxft-dev ncurses-dev"
 subpackages="$pkgname-doc"
 source="ftp://ftp.invisible-island.net/xterm/xterm-$pkgver.tgz
