--- a/testing/kitty/APKBUILD
+++ b/testing/kitty/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=kitty
 pkgver=0.16.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A modern, hackable, featureful, OpenGL based terminal emulator"
 url="https://sw.kovidgoyal.net/kitty/"
 arch="all"
@@ -14,7 +14,7 @@ license="GPL-3.0-only"
 #ERROR: test_shaping
 #ERROR: test_sprite_map
 options="!check"
-depends="py3-pygments imagemagick ncurses"
+depends="py3-pygments imagemagick ncurses ncurses-terminfo"
 makedepends="py3-setuptools harfbuzz-dev zlib-dev libpng-dev freetype-dev
 	fontconfig-dev mesa-dev python3-dev dbus-dev libxi-dev
 	libxkbcommon-dev libxrandr-dev libxinerama-dev libxcursor-dev
