--- a/community/konsole/APKBUILD
+++ b/community/konsole/APKBUILD
@@ -2,17 +2,18 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=konsole
 pkgver=19.12.2
-pkgrel=1
+pkgrel=2
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://kde.org/applications/system/konsole"
 pkgdesc="KDE's terminal emulator"
 license="GPL-2.0-only AND LGPL-2.1-or-later AND Unicode-DFS-2016"
+depends="ncurses-terminfo"
 makedepends="extra-cmake-modules qt5-qtbase-dev kbookmarks-dev kcompletion-dev
 	kconfig-dev kconfigwidgets-dev kcoreaddons-dev kcrash-dev kguiaddons-dev
 	kdbusaddons-dev ki18n-dev kiconthemes-dev kinit-dev kio-dev knewstuff-dev
 	knotifications-dev knotifyconfig-dev kparts-dev kpty-dev kservice-dev
 	ktextwidgets-dev kwidgetsaddons-dev kwindowsystem-dev kxmlgui-dev
-	kdbusaddons-dev kglobalaccel-dev kdoctools-dev"
+	kglobalaccel-dev kdoctools-dev"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/release-service/$pkgver/src/konsole-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
