main/putty: depend on ncurses-terminfo

--- a/main/putty/APKBUILD
+++ b/main/putty/APKBUILD
@@ -1,17 +1,17 @@
 # Maintainer: Jeff Bilyk <jbilyk@alpinelinux.org>
 pkgname=putty
 pkgver=0.73
-pkgrel=0
+pkgrel=1
 pkgdesc="SSH and telnet client"
 url="https://www.chiark.greenend.org.uk/~sgtatham/putty/"
 arch="all"
 license="MIT"
+depends="ncurses-terminfo"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
 source="http://the.earth.li/~sgtatham/putty/$pkgver/putty-$pkgver.tar.gz
 	fix-ppc64le-disable-werror.patch"
 options="!check" # no test suite
-builddir="$srcdir"/putty-$pkgver
 
 # secfixes:
 #   0.73-r0:
@@ -24,7 +24,6 @@ builddir="$srcdir"/putty-$pkgver
 #     - CVE-2019-9898
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,7 +32,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
