community/alacritty: depend on ncurses-terminfo

--- a/community/alacritty/APKBUILD
+++ b/community/alacritty/APKBUILD
@@ -1,11 +1,12 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=alacritty
 pkgver=0.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A cross-platform, GPU-accelerated terminal emulator"
 url="https://github.com/jwilm/alacritty"
 arch="x86_64 armv7 armhf aarch64 x86 ppc64le" # limited by rust/cargo
 license="Apache-2.0"
+depends="ncurses-terminfo"
 makedepends="
 	rust cargo cmake fontconfig-dev freetype-dev pkgconfig libxcb-dev python3
 	"
