community/perl-algorithm-diff-xs: move from testing

--- a/community/perl-algorithm-diff-xs/APKBUILD
+++ b/community/perl-algorithm-diff-xs/APKBUILD
@@ -8,9 +8,8 @@ pkgrel=3
 pkgdesc="Algorithm::Diff with XS core loop"
 url="https://metacpan.org/release/Algorithm-Diff-XS/"
 arch="all"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-algorithm-diff"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-algorithm-diff"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/A/AU/AUDREYT/Algorithm-Diff-XS-$pkgver.tar.gz"
