main/ncurses: re-arrange terminfo contents
This re-arranges the contents of ncurses-terminfo-base so it contains
all the terminfo entries for commonly used TERMs like xterm256-color.

It also includes all terminfo entries for terminals we package like
alacritty, gnome-terminal, konsole, kitty, st, etc. And a few others
like putty, tmux and vte.

The ncurses-terminfo-base packaged increased from 94.21 kB to 126.98 kB,
a quite small increase when considering that now it is in the majority
of cases the only package one has to install instead of having to rely
on the massive ncurses-terminfo package.

--- a/main/ncurses/APKBUILD
+++ b/main/ncurses/APKBUILD
@@ -2,7 +2,7 @@
 pkgname=ncurses
 pkgver=6.1_p20200118
 _ver=${pkgver/_p/-}
-pkgrel=0
+pkgrel=1
 pkgdesc="Console display library"
 url="https://invisible-island.net/ncurses/"
 arch="all"
@@ -72,12 +72,13 @@ dev() {
 }
 
 terminfo() {
+	depends=""
 	pkgdesc="$pkgdesc (other terminfo files)"
 	depends="$pkgname-terminfo-base=$pkgver-r$pkgrel"
-	rm -rf $subpkgdir
-	mkdir -p $subpkgdir/usr/share $subpkgdir/usr/lib
-	mv $pkgdir/usr/share/terminfo $subpkgdir/usr/share
-	mv $pkgdir/usr/lib/terminfo $subpkgdir/usr/lib
+
+	amove etc/terminfo
+	amove usr/share/terminfo
+	amove usr/lib/terminfo
 }
 
 libs() {
@@ -90,9 +91,34 @@ libs() {
 }
 
 base() {
+	depends=""
 	pkgdesc="Descriptions of common terminals"
-	mkdir -p "$subpkgdir"/etc
-	mv "$pkgdir"/etc/terminfo "$subpkgdir"/etc/
+
+	amove usr/share/terminfo/x/xterm-256color
+	amove usr/share/terminfo/a/alacritty
+	amove usr/share/terminfo/t/tmux
+	amove usr/share/terminfo/t/tmux-256color
+	amove usr/share/terminfo/t/terminator
+	amove usr/share/terminfo/t/terminology*
+	amove usr/share/terminfo/v/vte
+	amove usr/share/terminfo/v/vte-256color
+	amove usr/share/terminfo/g/gnome
+	amove usr/share/terminfo/g/gnome-256color
+	amove usr/share/terminfo/k/kitty
+	amove usr/share/terminfo/k/konsole
+	amove usr/share/terminfo/k/konsole-256color
+	amove usr/share/terminfo/k/konsole-linux
+	amove usr/share/terminfo/p/putty
+	amove usr/share/terminfo/p/putty-256color
+	amove usr/share/terminfo/r/rxvt
+	amove usr/share/terminfo/r/rxvt-256color
+	amove usr/share/terminfo/s/st-0*
+	amove usr/share/terminfo/s/st-256color
+	amove etc/terminfo
+
+	mkdir -p "$pkgdir"/etc/terminfo/s
+	mv "$subpkgdir"/etc/terminfo/s/sun "$pkgdir"/etc/terminfo/s
+	mv "$subpkgdir"/etc/terminfo/v "$pkgdir"/etc/terminfo
 }
 
 static() {
