community/perl-authcas: move from testing

--- a/community/perl-authcas/APKBUILD
+++ b/community/perl-authcas/APKBUILD
@@ -9,10 +9,8 @@ pkgdesc="Client library for JA-SIG CAS 2.0 authentication server"
 url="https://metacpan.org/release/AuthCAS/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-libwww perl-io-socket-ssl"
-cpanmakedepends="perl-module-build"
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+depends="perl-libwww perl-io-socket-ssl"
+makedepends="perl-dev perl-module-build"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/O/OS/OSALAUN/AuthCAS-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
