testing/physlock: upgrade to 13

--- a/testing/physlock/APKBUILD
+++ b/testing/physlock/APKBUILD
@@ -1,32 +1,26 @@
 # Contributor: Max Rees <maxcrees@me.com>
 # Maintainer:  Max Rees <maxcrees@me.com>
 pkgname=physlock
-pkgver=0.5
+pkgver=13
 pkgrel=0
 pkgdesc="Lightweight linux console locking tool"
 url="https://github.com/muennich/physlock"
 arch="all"
-license="GPL-2.0"
-makedepends="linux-headers"
-depends=""
-install=""
-subpackages="${pkgname}-doc"
-source="${pkgname}-${pkgver}.tar.gz::https://github.com/muennich/physlock/archive/v${pkgver}.tar.gz"
-builddir="${srcdir}/${pkgname}-${pkgver}"
-options="!check suid"
-
-prepare() {
-        default_prepare || return
-}
+license="GPL-2.0-or-later"
+options="!check suid" # No test suite
+makedepends="linux-headers linux-pam-dev"
+subpackages="$pkgname-doc"
+source="$pkgname-$pkgver.tar.gz::https://github.com/muennich/physlock/archive/v$pkgver.tar.gz
+	disable_systemd.patch
+	"
 
 build() {
-	cd "$builddir"
-	make || return 1
+	make
 }
 
 package() {
-	cd "$builddir"
-	make PREFIX="/usr" DESTDIR="$pkgdir" install || return 1
+	make PREFIX="/usr" DESTDIR="$pkgdir" install
 }
 
-sha512sums="0e22d2c1093556e2ca52da4ee36e53a7eebf9c2cf8e10592c95971aa3479c3ee1a31b9d71e52fca715a483f22740f6cf9a3c167fb61e4c6034a2ecf900fd5f9d  ${pkgname}-${pkgver}.tar.gz"
+sha512sums="85c291fb7b146fbd81aacbf94d8af07e727dd9b37b458988eaee5f7a51f9923871f9b19fd9438428635963864de67d3f2a72f938d99ffe6dc3015c3a1b99ea1c  physlock-13.tar.gz
+ee5bbaefddf95fbf6756e4301f90b78c42981e873795e9f45b8c6a06d7ed0248d67228217b30a6b8d4a0893262c4892117317b267723d3ff8ed6eac2412fbac0  disable_systemd.patch"
