--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -5,7 +5,7 @@ pkgrel=0
 pkgdesc="Qt5 - QtWebEngine components"
 url="https://www.qt.io/developers/"
 # ppc64le, s390x: not supported
-arch="all !ppc64le !s390x !armhf" # armhf blocked by qt5-qtdeclarative
+arch="all !ppc64le !s390x !armhf !armv7" # armhf blocked by qt5-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="gstreamer-dev gst-plugins-base-dev libxslt-dev mesa-dev icu-dev
 	libxext-dev glib-dev libxcomposite-dev libxrender-dev ninja ffmpeg-dev
@@ -14,13 +14,11 @@ makedepends="$depends_dev
 	alsa-lib-dev
 	bison
 	bsd-compat-headers
-	ffmpeg-dev
 	flex
 	fontconfig-dev
 	gperf
 	gzip
 	harfbuzz-dev
-	icu-dev
 	jsoncpp-dev
 	libevent-dev
 	libjpeg-turbo-dev
