community/perl-convert-pem: move from testing

--- a/community/perl-convert-pem/APKBUILD
+++ b/community/perl-convert-pem/APKBUILD
@@ -9,8 +9,7 @@ pkgdesc="Read/write encrypted ASN.1 PEM files"
 url="https://metacpan.org/release/Convert-PEM/"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-convert-asn1 perl-crypt-des_ede3 perl-class-errorhandler"
-depends="$cpandepends"
+depends="perl-convert-asn1 perl-crypt-des_ede3 perl-class-errorhandler"
 makedepends="perl-test-simple perl-test-exception perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/B/BT/BTROTT/Convert-PEM-$pkgver.tar.gz
