community/perl-crypt-des_ede3: move from testing

--- a/community/perl-crypt-des_ede3/APKBUILD
+++ b/community/perl-crypt-des_ede3/APKBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 pkgdesc="Perl module for Crypt-DES_EDE3"
 url="https://metacpan.org/release/Crypt-DES_EDE3/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 depends="perl-crypt-des"
 makedepends="perl-dev"
 subpackages="$pkgname-doc"
