community/perl-crypt-openssl-verifyx509: move from testing

--- a/community/perl-crypt-openssl-verifyx509/APKBUILD
+++ b/community/perl-crypt-openssl-verifyx509/APKBUILD
@@ -8,9 +8,8 @@ pkgrel=3
 pkgdesc="simple certificate verification"
 url="https://metacpan.org/release/Crypt-OpenSSL-VerifyX509/"
 arch="all"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends=" perl-crypt-openssl-x509"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-crypt-openssl-x509"
 makedepends="openssl-dev perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/C/CH/CHRISA/Crypt-OpenSSL-VerifyX509-$pkgver.tar.gz
