community/perl-crypt-openssl-x509: move from testing

--- a/community/perl-crypt-openssl-x509/APKBUILD
+++ b/community/perl-crypt-openssl-x509/APKBUILD
@@ -9,7 +9,7 @@ pkgdesc="Perl extension to OpenSSL's X509 API."
 url="https://metacpan.org/release/Crypt-OpenSSL-X509/"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-makedepends="perl-dev openssl-dev"
+depends="perl-dev openssl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/J/JO/JONASBN/Crypt-OpenSSL-X509-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
