--- a/community/perl-crypt-passwdmd5/APKBUILD
+++ b/community/perl-crypt-passwdmd5/APKBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 pkgdesc="Provide interoperable MD5-based crypt() functions"
 url="https://metacpan.org/release/Crypt-PasswdMD5/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
 makedepends="perl-dev perl-module-build"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/R/RS/RSAVAGE/Crypt-PasswdMD5-$pkgver.tgz"
