community/perl-crypt-smime: move from testing

--- a/community/perl-crypt-smime/APKBUILD
+++ b/community/perl-crypt-smime/APKBUILD
@@ -8,9 +8,9 @@ pkgrel=2
 pkgdesc="S/MIME message signing, verification, encryption and decryption"
 url="https://metacpan.org/release/Crypt-SMIME/"
 arch="all"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpanmakedepends="perl-extutils-cchecker perl-test-exception perl-extutils-pkgconfig"
-makedepends="openssl-dev perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+makedepends="perl-extutils-cchecker perl-test-exception perl-extutils-pkgconfig
+openssl-dev perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/M/MI/MIKAGE/Crypt-SMIME-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
