--- a/community/perl-datetime-format-iso8601/APKBUILD
+++ b/community/perl-datetime-format-iso8601/APKBUILD
@@ -8,9 +8,8 @@ pkgrel=1
 pkgdesc="Parses ISO8601 formats"
 url="https://metacpan.org/release/DateTime-Format-ISO8601/"
 arch="noarch"
-license="GPL-1.0-or-later Artistic-1.0-Perl"
-cpandepends="perl-datetime perl-datetime-format-builder"
-depends="$cpandepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-datetime perl-datetime-format-builder"
 makedepends="perl-module-build perl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/J/JH/JHOBLITT/DateTime-Format-ISO8601-$pkgver.tar.gz"
